tests/paczka1/fuzzy1/65497029.err
Error in line 5: Mtd S71 19,3
Error in line 4: S71 S851 51,7
Error in line 10: S71 S71 63,1
Error in line 24: S71 S71 68,83
Error in line 3: Hk8jWM83imE A965 95,7
Error in line 26: uR16 S71 44,3
Error in line 32: S71 S71 94,01
Error in line 28: Mtd A965 53,7
Error in line 37: S71 S71 213,29
Error in line 23: V0B A965 97,5
